test/tests/stages/15_arrays_and_pointer_arithmetic/valid/subscripting/subscript_pointer.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: subscript_pointer_to_pointer
        List[1]: 
          TIdentifier: x
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CSubscript: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: x
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Pointer: 
                Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[8]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 3
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  CSingleInit: 
                    CAddrOf: 
                      CVar: 
                        TIdentifier: a
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Int: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: ptr
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 3
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr_ptr
                  CSingleInit: 
                    CAddrOf: 
                      CVar: 
                        TIdentifier: ptr
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Pointer: 
                      Int: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CSubscript: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: ptr_ptr
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 0
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 3
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: dereferenced
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: subscript_pointer_to_pointer
                      List[1]: 
                        CVar: 
                          TIdentifier: ptr_ptr
                          None: 
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: dereferenced
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 3
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 3
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
