test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/extra_credit/switch_on_array.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: arr
                  CCompoundInit: 
                    List[3]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 2
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 3
                          None: 
                        None: 
                    None: 
                  Array: 
                    TLong: 3
                    Int: 
                  None: 
            CS: 
              CSwitch: 
                TIdentifier: (null)
                Bool: 0
                CVar: 
                  TIdentifier: arr
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CDefault: 
                          TIdentifier: (null)
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 0
                              None: 
                List[0]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 1
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
